--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         android:theme="@style/Theme.Quotes"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.activities.QuoteActivity"
+            android:label="@string/title_activity_quote"
+            android:theme="@style/Theme.Quotes.NoActionBar" />
+        <activity
+            android:name=".ui.activities.MainActivity"
             android:exported="true"
             android:screenOrientation="portrait" >
             <intent-filter>
