--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,15 +15,21 @@
         android:supportsRtl="true"
         android:testOnly="false"
         android:theme="@style/Theme.Quotes"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ui.activities.settings.SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activities.favorites.FavoritesActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activities.QuoteActivity"
             android:label="@string/title_activity_quote"
             android:theme="@style/Theme.Quotes.NoActionBar" />
         <activity
-            android:name=".ui.activities.MainActivity"
+            android:name=".ui.activities.home.MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
